# reqstool-regression

./: README.md  manual_verification_results.yml  requirements.yml
.github/workflows/: publish-java.yml  validate.yml
base-a/: manual_verification_results.yml  software_verification_cases.yml
base-b/: software_verification_cases.yml
docs/: REGRESSION_PLAN.md
fixtures/ecosystems/java/: .gitignore  README.md  annotations.yml  pom.xml  reqstool_config.yml  requirements.yml
fixtures/ecosystems/python/: README.md  requirements.yml
fixtures/ecosystems/typescript/: annotations.yml  package.json  reqstool_config.yml  requirements.yml
fixtures/parent/: manual_verification_results.yml  requirements.yml  software_verification_cases.yml
fixtures/parent/base-a/: requirements.yml
fixtures/parent/base-b/: requirements.yml
java/: annotations.yml  assembly-reqstool.xml  manual_verification_results.yml  pom.xml  requirements.yml  software_verification_cases.yml
java/test_results/failsafe/: TEST-com.reqstool.regression.SVCsTestIT.xml
java/test_results/surefire/: TEST-com.reqstool.regression.SVCsTest.xml
parent/: requirements.yml  software_verification_cases.yml
python/: annotations.yml  pyproject.toml  reqstool_config.yml  requirements.yml
python/src/: requirements_example.py  test_svcs.py
python/test_results/failsafe/: TEST-test_svcs_it.xml
python/test_results/surefire/: TEST-test_svcs.xml
typescript/: README.md  annotations.yml  requirements.yml
typescript/src/: RequirementsExample.ts  test_svcs.test.ts  test_svcs_it.test.ts
(+12 files in other folders)
